# agi-engineer

./: .agi-engineer.example.yml  .gitignore  .last-known-good-commit  COMPLETE_SUMMARY.md  CONTRIBUTING.md  DOCUMENTATION_GUIDE.txt  Dockerfile  GITHUB_OAUTH_SETUP.md  IMPLEMENTATION_SUMMARY.md  PHASE2_API_DOCS.md  PHASE3_INTEGRATION.md  PHASE_11.2_CHECKLIST.md  PHASE_11.2_FINAL_STATUS.md  PHASE_11.2_SUMMARY.md  PHASE_11.3_FINAL_STATUS.md  PHASE_11.3_IMPLEMENTATION.md  PHASE_11.3_REVIEW_READY.md  PHASE_11.3_SUMMARY.md  PHASE_11.4_COMPLETION_CHECKLIST.md  PHASE_11.4_FINAL_STATUS.md  PHASE_11.4_IMPLEMENTATION_GUIDE.md  PHASE_11.4_SUMMARY.md  PHASE_12_COMPLETE.md  PHASE_12_FINAL_STATUS.md  PHASE_12_IMPLEMENTATION_CHECKLIST.md  PHASE_12_QUICK_REFERENCE.md  PHASE_12_SUMMARY.md  PHASE_13.1_ANALYZER_REGISTRY.md  PHASE_13.2_ANALYZER_SELECTION.md  PHASE_13.2_FINAL_STATUS.md  PHASE_13.3_FINAL_STATUS.md  PHASE_13.3_ORCHESTRATOR_REGISTRY.md  PHASE_13.3_VERIFICATION_COMPLETE.md  PHASE_13.4_COMPLETION_REPORT.md  PHASE_13.4_FINAL_STATUS.md  PHASE_13.4_SUBSCRIPTION_UI.md  PHASE_14.1_FINAL_STATUS.md  PHASE_14.1_SERVICE_FOUNDATION.md  PHASE_14.2_ENFORCEMENT.md  PHASE_14.2_FINAL_STATUS.md  (+33 more)
backend/: .env.example  Dockerfile  agi_engineer_v2.db  fix_categories.py  init_db.py  main.py  pyproject.toml  seed_db.py
backend/app/: __init__.py  config.py  main.py  plans.py  schemas.py  security.py  v1_engine.py  v3_engine.py
backend/migrations/: phase_15_1_fix_approval.py  phase_15_3_fix_generation.py  phase_17_github_integration.py  phase_18_insights_dashboard.py
backend/tests/: __init__.py  (+7 more)
(+238 files in other folders)
