[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agi-engineer-v2"
version = "2.0.0"
description = "GitHub App for automated code quality analysis and fixing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "sqlalchemy==2.0.23",
    "alembic==1.12.1",
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "pyjwt==2.8.1",
    "cryptography==41.0.7",
    "PyYAML==6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-asyncio==0.23.2",
    "black==23.12.1",
    "ruff==0.1.11",
    "mypy==1.7.1",
]
